--- a/meta/main.yml
+++ b/meta/main.yml
@@ -8,9 +8,13 @@ galaxy_info:
   min_ansible_version: 2.1
 
   platforms:
-    - name: 'CentOS'
+    - name: EL
       version:
         - 8
+    - name: Ubuntu
+      version:
+        - 20.04
+        - 20.10
 
   galaxy_tags: []
     # List tags for your role here, one per line. A tag is a keyword that describes
